--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.AppCompat"
     tools:replace="android:allowBackup">
-    <activity android:name=".MainActivity">
+    <activity android:name=".MainActivity"
+              android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
